force-app/main/default/objects/Gate__c/Gate__c.object-meta.xml
<CustomObject>
    <description>Stores airport gate information.</description>
    <label>Gate</label>
    <nameField>
        <label>Gate Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>