force-app/main/default/objects/Gate__c/fields/Boarding_Bridge_Available__c.field-meta.xml
<CustomField>
    <fullName>Boarding_Bridge_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boarding Bridge Available</label>
    <type>Checkbox</type>
</CustomField>