force-app/main/default/objects/Gate__c/fields/Gate_Type__c.field-meta.xml
<CustomField>
    <fullName>Gate_Type__c</fullName>
    <label>Gate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Cargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>