force-app/main/default/objects/Gate__c/validationRules/Closed_Gate.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Gate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Closed&quot;),
Boarding_Bridge_Available__c
)</errorConditionFormula>
    <errorDisplayField>Boarding_Bridge_Available__c</errorDisplayField>
    <errorMessage>Closed gates cannot have the boarding bridge available.</errorMessage>
</ValidationRule>