force-app/main/default/objects/Gate__c/validationRules/Gate_Capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_Capacity</fullName>
    <active>true</active>
    <errorConditionFormula>Capacity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Capacity__c</errorDisplayField>
    <errorMessage>Gate Capacity must be greater than zero.</errorMessage>
</ValidationRule>